# ToDo

./: .env-example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.workspace.yml  docker-compose.yml
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
backend/: Dockerfile  README.md  pyproject.toml  startup.sh
backend/backend/: __init__.py  celery.py  settings.py  urls.py
backend/todos/: __init__.py  admin.py  apps.py  urls.py
backend/todos/migrations/: 0001_initial.py  0002_remove_task_board_id_task_board.py  0003_alter_task_board.py  __init__.py
backend/todos/models/: __init__.py  board.py  task.py  tasks.py
backend/todos/serializers/: __init__.py
backend/todos/serializers/v1/: __init__.py  board.py  task.py
backend/todos/tests/: __init__.py
backend/todos/tests/models/: __init__.py
backend/todos/tests/serializers/: __init__.py
backend/todos/tests/views/: __init__.py
backend/todos/views/: __init__.py
backend/todos/views/v1/: __init__.py  board.py  task.py
backend/users/: __init__.py  admin.py  apps.py  authenticate.py  urls.py
backend/users/management/: __init__.py
backend/users/management/commands/: __init__.py  createadmin.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_superuser_and_more.py  0003_alter_user_groups_alter_user_is_superuser.py  __init__.py
backend/users/models/: __init__.py  user.py
backend/users/serializers/: __init__.py
backend/users/serializers/v1/: __init__.py  detail.py  login.py  register.py  user.py
backend/users/tests/: __init__.py
backend/users/tests/models/: __init__.py
backend/users/tests/serializers/: __init__.py
backend/users/tests/views/: __init__.py
backend/users/views/: __init__.py
backend/users/views/v1/: __init__.py  cookie_token_refresh.py  detail.py  login.py  profile.py  register.py  user.py
docs/: App_Functionality.MD
docs/ADR/: ADR-0001-tech-stack-selection.MD  ADR-0002-backend-interface-asgi-vs-wsgi.MD  ADR-0003-hosting-choice.MD
frontend/: Dockerfile  README.md  default.conf  package-lock.json  package.json  startup.sh  vite.config.ts
frontend/src/: about.html  dashboard.html  index.html  login.html  register.html
frontend/src/components/: particles.html
frontend/src/css/: about.css  dashboard.css  form.css  index.css  main.css  style.css
frontend/src/forms/: login.html  register.html
frontend/src/forms/boards/: create.html  delete.html  detail.html  update.html
frontend/src/forms/tasks/: create.html  delete.html  (+1 more)
(+21 files in other folders)
