[project]
name = "todo"
version = "0.1.0"
description = ""
authors = [
    {name = "Hubert Kwiatek"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "celery (>=5.5.3,<6.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
pylint = "^3.3.7"
pylint-django = "^2.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
